fix: layout aligned

--- a/src/style/filter.sass
+++ b/src/style/filter.sass
@@ -23,7 +23,7 @@
 
 .filter__container
   position: relative
-  padding: 5px 0
+  padding: 5px 0 3px
   width: 100%
   margin: 0
   background-color: rgba(0, 0, 0, 0.07)
@@ -80,10 +80,9 @@
   top: 100%
   z-index: 1000
   background-color: #fff
-  border: 1px solid #ccc
   border: 1px solid rgba(0,0,0,0.15)
   border-radius: 4px
-  box-shadow: 0 6px 12px rgba(0,0,0,0.175)
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1)
   background-clip: padding-box
   &:hover
     display: block
@@ -181,16 +180,10 @@
 
 .filter__dropdown-tag
   display: inline-block
-  padding: .25em .4em
-  font-size: 75%
-  line-height: 1
+  font-size: 10px
   color: #999999
-  text-align: center
   white-space: nowrap
-  vertical-align: 1px
-  border-radius: .25rem
-  margin-left: 7px
-
+  margin-left: .25em
   &:empty
     display: none
 
